--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/data-set": "latest",
+    "@antv/g2": "latest",
+    "@element-plus/icons-vue": "^0.2.4",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.64",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
+    "vue-axios": "^3.2.5",
     "vue-router": "^4.0.0-0",
+    "vue-to-pdf": "^1.0.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
